# lizard-hook

./: .clang-format  .clang-tidy  CMakeLists.txt  CMakePresets.json  README.md  agents.md  development.md  lizard.json.sample  readme.md  spec.md
.github/workflows/: ci.yml  release.yml
assets/: CMakeLists.txt  atlas.json  embedded.h  emoji_atlas.json  lizard-processed-clean-no-meta.flac
cmake/: embed_resource.cmake
cmake/toolchains/: mingw.cmake
src/app/: CMakeLists.txt  config.cpp  config.h  main.cpp
src/audio/: CMakeLists.txt  engine.cpp  engine.h
src/hook/: CMakeLists.txt  filter.cpp  filter.h  keyboard_hook.h
src/hook/linux/: keyboard_hook.cpp
src/hook/mac/: keyboard_hook.mm
src/hook/windows/: keyboard_hook.cpp
src/overlay/: CMakeLists.txt  gl_raii.cpp  gl_raii.h  overlay.cpp  overlay.h
src/platform/: CMakeLists.txt  tray.hpp  window.hpp
src/platform/linux/: CMakeLists.txt  tray.cpp  window.cpp
src/platform/mac/: CMakeLists.txt  tray.mm  window.mm
src/platform/win/: CMakeLists.txt  resource.h  resources.rc  tray.cpp  window.cpp
src/tests/: CMakeLists.txt  audio_tests.cpp  config_tests.cpp  hook_tests.cpp  log_tests.cpp  overlay_perf_tests.cpp  overlay_tests.cpp
src/tests/stubs/: dr_flac.h  miniaudio.h
src/util/: CMakeLists.txt  log.cpp  log.h
tests/manual/: tray_icon.md
