add_executable(config_tests config_tests.cpp)
target_link_libraries(config_tests PRIVATE lizard_app Catch2::Catch2WithMain)
target_include_directories(config_tests PRIVATE ${CMAKE_SOURCE_DIR}/src)
add_test(NAME config COMMAND config_tests)
add_warning_flags(config_tests)

add_executable(hook_tests hook_tests.cpp)
target_link_libraries(hook_tests PRIVATE lizard_hook Catch2::Catch2WithMain)
target_include_directories(hook_tests PRIVATE ${CMAKE_SOURCE_DIR}/src)
target_compile_definitions(hook_tests PRIVATE LIZARD_TEST)
target_compile_definitions(lizard_hook PRIVATE LIZARD_TEST)
add_test(NAME hook_start COMMAND hook_tests)
add_warning_flags(hook_tests)

add_executable(overlay_perf_tests overlay_perf_tests.cpp)
target_link_libraries(overlay_perf_tests PRIVATE lizard_overlay Catch2::Catch2WithMain)
target_include_directories(overlay_perf_tests PRIVATE ${CMAKE_SOURCE_DIR}/src)
add_test(NAME overlay_perf COMMAND overlay_perf_tests)
add_warning_flags(overlay_perf_tests)
