add_executable(config_tests config_tests.cpp)
target_link_libraries(config_tests PRIVATE lizard_app Catch2::Catch2WithMain)
target_include_directories(config_tests PRIVATE ${CMAKE_SOURCE_DIR}/src)
add_test(NAME config COMMAND config_tests)
add_warning_flags(config_tests)

add_executable(hook_tests hook_tests.cpp)
target_link_libraries(hook_tests PRIVATE lizard_hook Catch2::Catch2WithMain)
target_include_directories(hook_tests PRIVATE ${CMAKE_SOURCE_DIR}/src)
target_compile_definitions(hook_tests PRIVATE LIZARD_TEST)
target_compile_definitions(lizard_hook PRIVATE LIZARD_TEST)
add_test(NAME hook_start COMMAND hook_tests)
add_warning_flags(hook_tests)

add_executable(overlay_tests overlay_tests.cpp)
target_link_libraries(overlay_tests PRIVATE lizard_app Catch2::Catch2WithMain)
target_include_directories(overlay_tests PRIVATE ${CMAKE_SOURCE_DIR}/src)
add_test(NAME overlay_select COMMAND overlay_tests)
add_warning_flags(overlay_tests)

add_executable(log_tests log_tests.cpp)
target_link_libraries(log_tests PRIVATE lizard_util Catch2::Catch2WithMain)
target_include_directories(log_tests PRIVATE ${CMAKE_SOURCE_DIR}/src)
add_test(NAME log_rotate COMMAND log_tests)
add_warning_flags(log_tests)

add_executable(audio_tests audio_tests.cpp)
target_link_libraries(audio_tests PRIVATE embedded_assets spdlog::spdlog Catch2::Catch2WithMain)
target_include_directories(audio_tests PRIVATE ${CMAKE_SOURCE_DIR}/src ${CMAKE_SOURCE_DIR}/src/tests/stubs)
add_test(NAME audio_engine COMMAND audio_tests)
add_warning_flags(audio_tests)
